# SentinelFlow

./: .env.example  .gitignore  ALLOYDB_SETUP.md  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
DB/: __init__.py  database.py
agents/: __init__.py  analyst.py  watchdog.py
examples/: __init__.py  demo.py
tests/: __init__.py  test_sentinelflow.py
