[project]
name = "sentinelflow"
version = "0.1.0"
description = "AI-driven multi-agent task managing system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "google-cloud-alloydb-connector>=1.0.0",
    "google-cloud-aiplatform>=1.42.0",
    "langchain>=0.1.0",
    "langchain-google-vertexai>=0.1.0",
    "pg8000>=1.31.0",
    "pgvector>=0.2.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "langchain-google-genai>=4.2.1",
]
